--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url-parse": "^1.4.3",
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.10.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
