--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-service": "^3.0.1",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "vue-elevator": "^1.1.4",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
