--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "url-parse": "^1.4.3",
-    "vee-validate": "^2.1.0-beta.8",
-    "vue": "^2.5.17",
+    "express": "^4.17.1",
+    "url-parse": "^1.4.7",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.11",
     "vue-carousel": "^0.10.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "postcss": {
     "plugins": {
